--- a/pages/settings.html
+++ b/pages/settings.html
@@ -52,7 +52,7 @@
             </svg>
             التصنيفات الرئيسية
           </a></li>
-        <li><a class="nLink active" href="./sub-cat.html">
+        <li><a class="nLink" href="./sub-cat.html">
             <svg width="22" height="26" viewBox="0 0 22 26" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M11.1778 16.3816V18.4216C11.1778 18.4793 11.2064 18.5288 11.2563 18.5577L12.8502 19.4795C12.9552 19.5403 13.0857 19.4648 13.0857 19.3433V16.6193L19.6645 12.8147L21.7384 14.014C21.9048 14.1103 22 14.2755 22 14.4679V21.4719C22 21.6644 21.9048 21.8296 21.7384 21.9258L15.6828 25.4278C15.5164 25.5241 15.3259 25.5241 15.1595 25.4278L9.10391 21.9258C8.93751 21.8296 8.84228 21.6644 8.84228 21.4719V15.1337L10.7108 16.2143C10.8586 16.2998 11.0167 16.3555 11.1778 16.3816ZM11.6527 0.572173C11.4863 0.475942 11.2958 0.475942 11.1295 0.572173L5.0738 4.07421C4.90741 4.17044 4.81217 4.3357 4.81217 4.5281V11.5321C4.81217 11.7246 4.90741 11.8898 5.0738 11.986L11.1294 15.488C11.2958 15.5843 11.4863 15.5843 11.6527 15.488L17.7083 11.986C17.8747 11.8898 17.9699 11.7246 17.9699 11.5321V4.5281C17.9699 4.33564 17.8747 4.17044 17.7083 4.07421L15.6344 2.87489L9.05556 6.6795V9.40352C9.05556 9.52496 8.92511 9.60038 8.82009 9.53969L7.22619 8.6179C7.17627 8.58902 7.1477 8.53949 7.1477 8.48173V5.57616L13.7265 1.77154L11.6527 0.572173ZM3.97496 9.45425L2.33547 10.4024V13.308C2.33547 13.3657 2.36404 13.4153 2.41396 13.4441L4.00787 14.3659C4.11283 14.4267 4.24334 14.3512 4.24334 14.2298V12.3477C4.35191 12.4929 4.49079 12.6172 4.65514 12.7123L8.00501 14.6495V19.6408L6.84039 20.3143C6.67399 20.4105 6.48352 20.4105 6.31712 20.3143L0.261631 16.8123C0.0952336 16.7161 0 16.5509 0 16.3584V9.35435C0 9.16189 0.0952336 8.99669 0.261631 8.90046L3.97496 6.75304V9.45425Z"
@@ -102,7 +102,7 @@
             البريد الوارد
           </a></li>
 
-        <li class="sett"><a class="nLink" href="./settings.html">
+        <li class="sett"><a class="nLink active" href="./settings.html">
             <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M21.7388 9.50258L19.937 9.27354C19.7885 8.81642 19.6054 8.37558 19.3917 7.95679L20.5044 6.52408C20.9548 5.94429 20.9021 5.12587 20.3875 4.62754L18.878 3.11817C18.3749 2.59875 17.5564 2.547 16.9757 2.99646L15.5448 4.10908C15.126 3.89538 14.6852 3.71233 14.227 3.56379L13.998 1.765C13.9117 1.04338 13.2993 0.5 12.5739 0.5H10.4271C9.70161 0.5 9.08921 1.04338 9.00296 1.76213L8.77391 3.56379C8.3158 3.71233 7.87495 3.89442 7.45614 4.10908L6.02433 2.99646C5.44548 2.547 4.62703 2.59875 4.12771 3.11337L2.61828 4.62179C2.09884 5.12587 2.04613 5.94429 2.49656 6.52504L3.60923 7.95679C3.39456 8.37558 3.21247 8.81642 3.06392 9.27354L1.26505 9.50258C0.543398 9.58883 0 10.2012 0 10.9267V13.0733C0 13.7988 0.543398 14.4112 1.26218 14.4974L3.06392 14.7265C3.21247 15.1836 3.39552 15.6244 3.60923 16.0432L2.49656 17.4759C2.04613 18.0557 2.09884 18.8741 2.61348 19.3725L4.12292 20.8818C4.62703 21.4003 5.44452 21.452 6.02529 21.0026L7.4571 19.89C7.87591 20.1046 8.31676 20.2877 8.77391 20.4352L9.00296 22.2331C9.08921 22.9566 9.70161 23.5 10.4271 23.5H12.5739C13.2993 23.5 13.9117 22.9566 13.998 22.2379L14.227 20.4362C14.6842 20.2877 15.125 20.1046 15.5439 19.8909L16.9766 21.0035C17.5564 21.454 18.3749 21.4013 18.8732 20.8866L20.3827 19.3772C20.9021 18.8732 20.9548 18.0557 20.5044 17.475L19.3917 16.0432C19.6064 15.6244 19.7894 15.1836 19.937 14.7265L21.7349 14.4974C22.4566 14.4112 23 13.7988 23 13.0733V10.9267C23.001 10.2012 22.4576 9.58883 21.7388 9.50258ZM11.5005 16.7917C8.85824 16.7917 6.70861 14.6421 6.70861 12C6.70861 9.35787 8.85824 7.20833 11.5005 7.20833C14.1427 7.20833 16.2923 9.35787 16.2923 12C16.2923 14.6421 14.1427 16.7917 11.5005 16.7917Z"
@@ -127,49 +127,63 @@
     <div class="mainCont" id="main">
       <!-- Start Main Content -->
       <div class="conta p30">
-        <h3> اضافة تصنيف فرعي جديد   </h3>
+        <h3> الاعدادات الرئيسية </h3>
       </div>
 
       <form class="foLinks p30">
         <div class="foLIn">
           <div class="secLinks w430">
             <div class="input">
-              <label for="">اسم التصنيف باللغة العربية :</label>
-              <input type="text" placeholder="اسم المنتج باللغة العربية : ">
-            </div>
-            <div class="input">
-              <label for="file">صورة التصنيف :</label>
+              <label for="file5"> الفيديو التعريفي :</label>
               <div class="customInput">
-                <input type="file" accept="image/*" hidden id="file">
-                <label for="file">تحميل <i class="fa-regular fa-arrow-up-from-bracket"></i></label>
+                <input class="video" type="file" accept="video/mp4,video/mkv, video/x-m4v,video/*" id="file5" hidden>
+                <label for="file5">تحميل <i class="fa-regular fa-arrow-up-from-bracket"></i></label>
               </div>
             </div>
-            <div class="prImgs" id="iconInner">
-              <div class="pImg oneImg" >
+            <div class="prImgs" id="vInner">
+              <div class="pImg oneImg">
+                <video src="https://video.wixstatic.com/video/11062b_3e2f37c297534f9ead156265242fbca8/720p/mp4/file.mp4" muted controls></video>
+                <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
+              </div>
+            </div>
+          </div>
+          <div class="secLinks w430">
+            <div class="input">
+              <label for="file2">صور السلايدر في الصفحة الرئيسية:  </label>
+              <div class="customInput">
+                <input type="file" accept="image/*" multiple hidden id="file2">
+                <label for="file2">تحميل <i class="fa-regular fa-arrow-up-from-bracket"></i></label>
+              </div>
+            </div>
+            <div class="prImgs slider">
+              <div class="pImg">
+                <img src="../media/product.png" alt="">
+                <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
+              </div>
+              <div class="pImg">
+                <img src="../media/product.png" alt="">
+                <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
+              </div>
+              <div class="pImg">
+                <img src="../media/product.png" alt="">
+                <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
+              </div>
+              <div class="pImg">
+                <img src="../media/product.png" alt="">
+                <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
+              </div>
+              <div class="pImg">
+                <img src="../media/product.png" alt="">
+                <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
+              </div>
+              <div class="pImg">
                 <img src="../media/product.png" alt="">
                 <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
               </div>
             </div>
-
-          </div>
-          <div class="secLinks w430">
-            <div class="input">
-              <label for="">اسم التصنيف باللغة  الانجليزية :</label>
-              <input type="text" placeholder="اسم التصنيف باللغة  الانجليزية : ">
-            </div>
-            <div class="input">
-              <label for="">التصنيف الرئيسي :</label>
-              <div class="select">
-                <select name="" id="">
-                  <option value="0">اختر التصنيف الرئيسي</option>
-                  <option value="1">اختر التصنيف 2</option>
-                </select>
-                <i class="fa-regular fa-angle-left"></i>
-              </div>
-            </div>
           </div>
         </div>
-        <button class="saveBtn" type="submit">اضافة التصنيف  </button>
+        <button class="saveBtn" type="submit">حفظ التعديلات  </button>
       </form>
       <!-- End Main Content -->
     </div>
@@ -178,7 +192,7 @@
 </body>
 <script src="../js/main.js"></script>
 <script src="../js/links.js"></script>
-<script src="../js/cat.js"></script>
+<script src="../js/setting.js"></script>
 <script src="../js/select.js"></script>
 
 </html>
