--- a/pages/emails.html
+++ b/pages/emails.html
@@ -19,7 +19,7 @@
     <div class="logo">
       <img class="imgg" src="../media/logo.png" alt="">
       <i class="fa-regular fa-bars" id="menu"></i>
-      <span>لوحة التحكم</span>
+      <span> لوحة التحكم</span>
     </div>
     <a href="##">الذهاب الى الموقع <img src="../media/icons/website.png" alt=""></a>
   </nav>
@@ -52,7 +52,7 @@
             </svg>
             التصنيفات الرئيسية
           </a></li>
-        <li><a class="nLink active" href="./sub-cat.html">
+        <li><a class="nLink" href="./sub-cat.html">
             <svg width="22" height="26" viewBox="0 0 22 26" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M11.1778 16.3816V18.4216C11.1778 18.4793 11.2064 18.5288 11.2563 18.5577L12.8502 19.4795C12.9552 19.5403 13.0857 19.4648 13.0857 19.3433V16.6193L19.6645 12.8147L21.7384 14.014C21.9048 14.1103 22 14.2755 22 14.4679V21.4719C22 21.6644 21.9048 21.8296 21.7384 21.9258L15.6828 25.4278C15.5164 25.5241 15.3259 25.5241 15.1595 25.4278L9.10391 21.9258C8.93751 21.8296 8.84228 21.6644 8.84228 21.4719V15.1337L10.7108 16.2143C10.8586 16.2998 11.0167 16.3555 11.1778 16.3816ZM11.6527 0.572173C11.4863 0.475942 11.2958 0.475942 11.1295 0.572173L5.0738 4.07421C4.90741 4.17044 4.81217 4.3357 4.81217 4.5281V11.5321C4.81217 11.7246 4.90741 11.8898 5.0738 11.986L11.1294 15.488C11.2958 15.5843 11.4863 15.5843 11.6527 15.488L17.7083 11.986C17.8747 11.8898 17.9699 11.7246 17.9699 11.5321V4.5281C17.9699 4.33564 17.8747 4.17044 17.7083 4.07421L15.6344 2.87489L9.05556 6.6795V9.40352C9.05556 9.52496 8.92511 9.60038 8.82009 9.53969L7.22619 8.6179C7.17627 8.58902 7.1477 8.53949 7.1477 8.48173V5.57616L13.7265 1.77154L11.6527 0.572173ZM3.97496 9.45425L2.33547 10.4024V13.308C2.33547 13.3657 2.36404 13.4153 2.41396 13.4441L4.00787 14.3659C4.11283 14.4267 4.24334 14.3512 4.24334 14.2298V12.3477C4.35191 12.4929 4.49079 12.6172 4.65514 12.7123L8.00501 14.6495V19.6408L6.84039 20.3143C6.67399 20.4105 6.48352 20.4105 6.31712 20.3143L0.261631 16.8123C0.0952336 16.7161 0 16.5509 0 16.3584V9.35435C0 9.16189 0.0952336 8.99669 0.261631 8.90046L3.97496 6.75304V9.45425Z"
@@ -83,7 +83,7 @@
             </svg>
             العملاء
           </a></li>
-        <li><a class="nLink" href="./emails.html">
+        <li><a class="nLink active" href="./emails.html">
             <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M24.7869 1.7168L17.4539 9.00258L24.7869 16.2884C24.9194 16.0113 24.9999 15.705 24.9999 15.3779V2.62724C24.9999 2.30012 24.9194 1.99386 24.7869 1.7168Z"
@@ -126,59 +126,149 @@
 
     <div class="mainCont" id="main">
       <!-- Start Main Content -->
-      <div class="conta p30">
-        <h3> اضافة تصنيف فرعي جديد   </h3>
-      </div>
-
-      <form class="foLinks p30">
-        <div class="foLIn">
-          <div class="secLinks w430">
-            <div class="input">
-              <label for="">اسم التصنيف باللغة العربية :</label>
-              <input type="text" placeholder="اسم المنتج باللغة العربية : ">
-            </div>
-            <div class="input">
-              <label for="file">صورة التصنيف :</label>
-              <div class="customInput">
-                <input type="file" accept="image/*" hidden id="file">
-                <label for="file">تحميل <i class="fa-regular fa-arrow-up-from-bracket"></i></label>
-              </div>
-            </div>
-            <div class="prImgs" id="iconInner">
-              <div class="pImg oneImg" >
-                <img src="../media/product.png" alt="">
-                <i class="fa-light fa-trash-can" data-name="product.png" onclick="removeImg(this)"></i>
-              </div>
-            </div>
-
-          </div>
-          <div class="secLinks w430">
-            <div class="input">
-              <label for="">اسم التصنيف باللغة  الانجليزية :</label>
-              <input type="text" placeholder="اسم التصنيف باللغة  الانجليزية : ">
-            </div>
-            <div class="input">
-              <label for="">التصنيف الرئيسي :</label>
-              <div class="select">
-                <select name="" id="">
-                  <option value="0">اختر التصنيف الرئيسي</option>
-                  <option value="1">اختر التصنيف 2</option>
-                </select>
-                <i class="fa-regular fa-angle-left"></i>
-              </div>
+      <div class="pageCont">
+        <div class="conta p30">
+          <h3> البريد الوارد </h3>
+        </div>
+        <div class="conta p30">
+          <form class="taIn">
+            <table class="tg">
+              <thead>
+                <tr>
+                  <th>الاسم</th>
+                  <th>المدينة</th>
+                  <th>الهاتف</th>
+                  <th>الايميل</th>
+                  <th>ادوات التحكم</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td class="tools">
+                    <img src="../media/icons/edit.png" alt="" id="edit">
+                    <img src="../media/icons/delete.png" alt="">
+                  </td>
+                </tr>
+                <tr>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td class="tools">
+                    <img src="../media/icons/edit.png" alt="" id="edit">
+                    <img src="../media/icons/delete.png" alt="">
+                  </td>
+                </tr>
+                <tr>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td class="tools">
+                    <img src="../media/icons/edit.png" alt="" id="edit">
+                    <img src="../media/icons/delete.png" alt="">
+                  </td>
+                </tr>
+                <tr>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td class="tools">
+                    <img src="../media/icons/edit.png" alt="" id="edit">
+                    <img src="../media/icons/delete.png" alt="">
+                  </td>
+                </tr>
+                <tr>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td class="tools">
+                    <img src="../media/icons/edit.png" alt="" id="edit">
+                    <img src="../media/icons/delete.png" alt="">
+                  </td>
+                </tr>
+                <tr>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td>نص تجريبـــي</td>
+                  <td class="tools">
+                    <img src="../media/icons/edit.png" alt="" id="edit">
+                    <img src="../media/icons/delete.png" alt="">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
+          <div class="paginationCont">
+            <div class="page">Showing <span>1-20</span> of <span>365</span></div>
+            <div class="paginations">
+              <ul class="spans">
+                <li><a href="##" class="page-link"><img src="../media/icons/arrow-prev.svg" alt=""></a></li>
+                <li><a href="##" class="page-link active">1</a></li>
+                <li><a href="##" class="page-link">2</a></li>
+                <li><a href="##" class="page-link">3</a></li>
+                <li><a href="##" class="page-link">...</a></li>
+                <li><a href="##" class="page-link">13</a></li>
+                <li><a href="##" class="page-link"><img src="../media/icons/arrow-next.svg" alt=""></a></li>
+              </ul>
             </div>
           </div>
         </div>
-        <button class="saveBtn" type="submit">اضافة التصنيف  </button>
-      </form>
+      </div>
       <!-- End Main Content -->
     </div>
 
   </div>
+
+  <!-- Enail Pop Message  -->
+
+  <div class="mes">
+    <div class="p100">
+      <div class="contactPop">
+        <div class="er">
+          <span>Contact name :</span>
+          <span>Lorem ipsum</span>
+        </div>
+        <div class="er">
+          <span>Street :</span>
+          <span>Lorem ipsum</span>
+        </div>
+        <div class="er">
+          <span>Phone :</span>
+          <span>Lorem ipsum</span>
+        </div>
+        <div class="er">
+          <span>City :</span>
+          <span>Lorem ipsum</span>
+        </div>
+        <div class="er fdr">
+          <span>Additional file :</span>
+          <a href="##" download>download <i class="fa-regular fa-arrow-down"></i></a>
+        </div>
+        <div class="er">
+          <span>E-mail :</span>
+          <span>Lorem ipsum</span>
+        </div>
+        <div class="er flc">
+          <span>Message :</span>
+          <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+        </div>
+        <i class="fa-regular fa-x" id="exit"></i>
+      </div>
+    </div>
+  </div>
+
 </body>
 <script src="../js/main.js"></script>
 <script src="../js/links.js"></script>
-<script src="../js/cat.js"></script>
-<script src="../js/select.js"></script>
+<script src="../js/paginations.js"></script>
+<script src="../js/edit.js"></script>
 
 </html>
